Fix login form eye icon mis aligned in small screen

--- a/src/Styles/Login.scss
+++ b/src/Styles/Login.scss
@@ -10,17 +10,22 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  min-height: 900px;
+  min-width: 490px;
 }
 .login-overlay {
   height: 100vh;
   width: 100vw;
   background-color: rgba(0, 0, 0, 0.178);
+  min-height: 900px;
+  min-width: 490px;
 }
 
 .login-wrapper {
   height: inherit;
   width: inherit;
   max-width: 1380px;
+  min-width: 460px;
   margin: 0 auto;
   @include flexCenter(center);
 }
